--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "mdsystemweb/module-validate-taxvat",
     "description": "Module to validate cpf field",
 	"license": "proprietary",
-	"minimum-stability": "alpha",
+	"minimum-stability": "dev",
     "authors": [
         {
             "name": "Diogo dos Santos Alves",
@@ -11,7 +11,6 @@
         }
     ],
 	"type": "magento2-language",
-	"version": "1.0.4",
 	"autoload": {
 		"psr-4": {
 			"Mdsystemweb\\ValidateTaxvat\\": ""
